# Flipperama

./: README.md
BallSensor/cpp_cam/: CMakeLists.txt  EventROI.cpp  MQTTIntegration.cpp  MQTTIntegration.h  Measure.cpp  Measure.h  config.conf  continuous_raw_file_ramdisk.cpp  raw_file_ramdisk.cpp  simple_test_cv.cpp  simpletest_raspicam.cpp  test.ppm
BallSensor/raspicam/: CMakeLists.txt
BallSensor/raspicam/simpletest_raspicam/: CMakeCache.txt  Findraspicam.cmake  Makefile  cmake_install.cmake  cmake_uninstall.cmake
BallSensor/raspicam/simpletest_raspicam/src/: Makefile  cmake_install.cmake  libraspicam.so.0.1.2
BallSensor/raspicam/simpletest_raspicam/utils/: Makefile  cmake_install.cmake  raspicam_cv_still_test  raspicam_cv_test  raspicam_still_test  raspicam_test
BallSensor/raspicam/src/: raspicam.cpp  raspicam.h  raspicam_cv.cpp  raspicam_cv.h  raspicam_still_cv.h
BallSensor/raspicam/src/private/: private_impl.cpp  private_impl.h
BallSensor/raspicam/utils/: raspicam_cv_still_test.cpp  raspicam_cv_test.cpp
Embedded/: .cproject  .project  Embedded.cpp  Image.cpp  Image.h  bin.h  config.h  group1.cpp  group1.h  group2.cpp  group2.h  group3.cpp  group3.h  group4.cpp  group4.h  racket.cpp  screen.h  sequence.cpp  sequence.h  simple.ino  sloeber.ino.cpp  stub.h
RaspiPimbal/: Application.py  gui.py  requirements.txt
ScreenMaker/: ScreenMaker.pro  ScreenMaker.pro.user.037d61c.21  bin.h  config.h  effects.cpp  effects.h  generate_bin.cpp  generate_bin.h  ledindicator.cpp  ledindicator.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  my_qlabel.cpp  my_qlabel.h  sequence.cpp  sequence.h  text.txt
build-ScreenMaker-Desktop_Qt_5_12_0_MinGW_64_bit2-Debug/: Makefile  Makefile.Debug  Makefile.Release  object_script.ScreenMaker.Debug  object_script.ScreenMaker.Release  ui_mainwindow.h
build-ScreenMaker-Desktop_Qt_5_12_0_MinGW_64_bit2-Debug/debug/: moc_ledindicator.cpp  moc_mainwindow.cpp  moc_my_qlabel.cpp  moc_sequence.cpp
